- Zero semester highlight more visible - bug in dynamic calculating the average mark

--- a/Codeigniter/resources/less/meinfhd2-desktop.less
+++ b/Codeigniter/resources/less/meinfhd2-desktop.less
@@ -98,7 +98,7 @@ body {
 
 		width: 25px;
 		height: 10px;
-		padding-top: 2px;
+		padding-top: 1px;
 		padding-bottom: 2px;
 
 		.border-radius(2px);
@@ -134,8 +134,8 @@ body {
 
 	span.modulfach {
 		position: absolute;
-			bottom: 12px;
-			left: 4px;
+			bottom: 3px;
+			left: 3px;
 		font-weight: bold;
 		font-size: 14px;
 	}
@@ -238,7 +238,41 @@ div#stundenplan {
 
 
 
+.std-rel { position: relative; }
+.std-abs { position: absolute; }
 
+.std-col {
+	width: 18%;
+/* 		margin-right: 20px; */
+}
+
+.std-col-legend {
+	width: 10%;
+}
+
+.std-event {
+	// overflow: hidden;
+	// border: 1px #FAFAFA solid;
+	// color: #fff;
+
+	overflow: hidden;
+	color: #fff;
+	display: block;
+	
+	&:hover {
+		text-decoration: none;
+	}
+}
+
+.std-event-container {
+	padding: 4px;
+	word-break: break-word;
+}
+
+#stundenplan .table-condensed td.std-time-cell {
+	padding: 0;
+	background-image: url('../img/std-time-stripes-50.png');
+}
 
 
 
